tests/invalid/match_value_requires_assumed.wio
fn Entry() -> i32 {
    let value = match (1) {
        1: 10;
        2: 20;
    };

    return value;
}
